--- a/html/about.html
+++ b/html/about.html
@@ -6,6 +6,7 @@
         <title>Horizun</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+         <link rel="icon" href="images/Untitled design (2).png" type="image/png" />
     </head>
 <body class="bg-white text-gray-800">
 
