--- a/html/contact.html
+++ b/html/contact.html
@@ -4,14 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us | Horizun</title>
-
-  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Font Awesome for icons -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
-  <!-- Optional: Add a nice serif font for luxury feel -->
+ <link rel="icon" href="images/Untitled design (2).png" type="image/png" />
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -21,19 +16,13 @@
 
 <body class="bg-white text-black">
 
-  <!-- Header -->
   <header class="bg-white fixed top-0 w-full z-50 shadow-sm">
     <div class="max-w-7xl mx-auto px-10 py-6 flex justify-between items-center">
       
-      <!-- Shopping Bag Icon -->
-      <i class="fas fa-shopping-bag text-xl"></i>
-
-      <!-- Horizun Logo -->
       <div class="w-28">
         <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png" alt="Horizun Logo" />
       </div>
-
-      <!-- Menu -->
+      
       <div class="flex items-center space-x-2">
         <i class="fas fa-bars text-xl"></i>
         <span class="text-sm font-semibold">MENU</span>
@@ -41,7 +30,6 @@
     </div>
   </header>
 
-  <!-- Contact Section -->
   <main class="pt-44 pb-32 px-6 md:px-24 bg-white">
     <div class="max-w-3xl mx-auto text-center">
         <h1 class="text-4xl font-light mb-4">Contact Horizun</h1>
@@ -52,7 +40,6 @@
     </div>
 
     <form class="max-w-2xl mx-auto space-y-8">
-      <!-- Name -->
       <div>
         <label for="name" class="block mb-2 text-sm font-medium tracking-wide">Full Name</label>
         <input 
@@ -65,7 +52,6 @@
         />
       </div>
 
-      <!-- Email -->
       <div>
         <label for="email" class="block mb-2 text-sm font-medium tracking-wide">Email Address</label>
         <input 
@@ -78,7 +64,6 @@
         />
       </div>
 
-      <!-- Message -->
       <div>
         <label for="message" class="block mb-2 text-sm font-medium tracking-wide">Your Message</label>
         <textarea 
@@ -91,7 +76,6 @@
         ></textarea>
       </div>
 
-      <!-- Submit Button -->
       <div class="text-center pt-6">
         <button 
           type="submit"
@@ -103,7 +87,6 @@
     </form>
   </main>
 
-  <!-- Footer -->
   <footer class="py-40 px-60 bg-black text-white">
     <img src="images/a589862f-9d57-4dd3-bdb0-413de0b7eacb_removalai_preview.png"
          class="filter grayscale brightness-0 invert py-7 w-auto max-w-32" alt="Horizun Logo">
