--- a/html/shop_page.html
+++ b/html/shop_page.html
@@ -6,22 +6,19 @@
     <title>Horizun</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+     <link rel="icon" href="images/Untitled design (2).png" type="image/png" />
 </head>
 
-<!-- header-->
 <header class="bg-white text-black flex justify-between items-center px-40 py-10 fixed top-0 w-full z-50">
-    <!-- Left Icon (Bag) -->
     <div>
         <i class="fas fa-shopping-bag text-xl">
         </i>
     </div>
 
-    <!-- Logo -->
     <div class="text-lg tracking-widest font-[Tangerine] w-24 md:w-32 lg:w-30 h-auto">
         <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png">
     </div>
 
-    <!-- Right Menu -->
     <div class="flex items-center space-x-2">
         <i class="fas fa-bars text-xl"></i>
         <span class="text-sm font-semibold">MENU</span>
@@ -31,7 +28,6 @@
 <section class="h-screen bg-black px-10">
     <div class="swiper mySwiper h-full">
 
-      <!-- Slides Wrapper -->
       <div class="swiper-wrapper">
 
      <!-- Slide 1 -->
