--- a/html/index.html
+++ b/html/index.html
@@ -18,41 +18,47 @@
         }
       }
     </script>
+    <style>
+      /* Ensure mobile overflow handling */
+      body, html {
+        overflow-x: hidden;
+      }
+    </style>
 </head>
 <body class="bg-white text-black">
 
-<header class="bg-white text-black flex justify-between items-center px-6 md:px-20 lg:px-40 py-6 md:py-10 fixed top-0 w-full z-50">
+<header class="bg-white text-black flex justify-between items-center px-4 sm:px-6 md:px-20 lg:px-40 py-4 sm:py-6 md:py-10 fixed top-0 w-full z-50">
     <div>
-        <i class="fas fa-shopping-bag text-xl"></i>
+        <i class="fas fa-shopping-bag text-lg sm:text-xl"></i>
     </div>
-    <div class="w-24 md:w-32">
+    <div class="w-20 sm:w-24 md:w-32">
         <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png" alt="Horizun Logo">
     </div>
-    <div class="flex items-center space-x-2">
-        <i class="fas fa-bars text-xl"></i>
-        <span class="text-sm font-semibold">MENU</span>
+    <div class="flex items-center space-x-1 sm:space-x-2">
+        <i class="fas fa-bars text-lg sm:text-xl"></i>
+        <span class="text-xs sm:text-sm font-semibold">MENU</span>
     </div>
 </header>
 
-<section class="h-screen bg-black px-4 md:px-10">
+<section class="h-screen bg-black px-4 sm:px-6 md:px-10">
   <div class="swiper mySwiper h-full">
     <div class="swiper-wrapper">
-      <div class="swiper-slide h-screen flex items-center justify-end bg-cover bg-center px-6 md:px-20 lg:px-60" style="background-image: url('images/special edition (1).png');">
+      <div class="swiper-slide h-screen flex items-center justify-end bg-cover bg-center px-4 sm:px-6 md:px-20 lg:px-60" style="background-image: url('images/special edition (1).png');">
         <div class="text-center">
-          <img src="images/1df6e320-7839-488f-8edc-8d7a2791a3d2_removalai_preview.png" class="max-w-xs md:max-w-md lg:max-w-lg w-auto h-auto mx-auto">
+          <img src="images/1df6e320-7839-488f-8edc-8d7a2791a3d2_removalai_preview.png" class="max-w-[90%] sm:max-w-xs md:max-w-md lg:max-w-lg w-auto h-auto mx-auto">
           <a href="shop_page.html">
-            <button class="mt-4 px-6 md:px-8 py-3 border border-white text-white text-sm tracking-widest hover:bg-white hover:text-black transition duration-300 font-playfair">
+            <button class="mt-4 px-4 sm:px-6 md:px-8 py-2 sm:py-3 border border-white text-white text-xs sm:text-sm tracking-widest hover:bg-white hover:text-black transition duration-300 font-playfair">
               DISCOVER THE PREMIUM COLLECTION
             </button>
           </a>
         </div>
       </div>
-      <div class="swiper-slide h-screen flex items-center bg-cover bg-center px-4 md:px-10 lg:px-20" style="background-image: url('images/special edition (2).png');">
+      <div class="swiper-slide h-screen flex items-center bg-cover bg-center px-4 sm:px-6 md:px-10 lg:px-20" style="background-image: url('images/special edition (2).png');">
         <div class="text-white">
-          <h2 class="text-xs md:text-sm lg:text-xl tracking-widest">GT-640</h2>
-          <h3 class="text-3xl md:text-5xl lg:text-6xl mb-4 font-bold">DARK FLASK</h3>
+          <h2 class="text-[10px] sm:text-xs md:text-sm lg:text-xl tracking-widest">GT-640</h2>
+          <h3 class="text-2xl sm:text-3xl md:text-5xl lg:text-6xl mb-4 font-bold">DARK FLASK</h3>
           <a href="shop_page.html">
-            <button class="mt-4 px-6 md:px-8 py-3 border border-white text-white text-sm tracking-widest hover:bg-white hover:text-black transition duration-300 font-playfair">
+            <button class="mt-4 px-4 sm:px-6 md:px-8 py-2 sm:py-3 border border-white text-white text-xs sm:text-sm tracking-widest hover:bg-white hover:text-black transition duration-300 font-playfair">
               DISCOVER NEW FLASK
             </button>
           </a>
@@ -79,26 +85,26 @@
 </section>
 
 <section class="py-10 bg-white text-center">
-  <div class="grid grid-cols-2 md:grid-cols-4 gap-2">
+  <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-2">
     <img src="images/collection3.png" alt="Bottle" class="w-full h-auto object-contain">
     <img src="images/collection2.png" alt="Bottle" class="w-full h-auto object-contain">
     <img src="images/collection4.png" alt="Bottle" class="w-full h-auto object-contain">
     <img src="images/collection5.png" alt="Bottle" class="w-full h-auto object-contain">
   </div>
-  <h3 class="text-2xl text-black py-10 font-semibold">RUSSIAN ROULETTE'S COLLECTION</h3>
+  <h3 class="text-xl sm:text-2xl text-black py-10 font-semibold">RUSSIAN ROULETTE'S COLLECTION</h3>
 </section>
 
-<section class="h-screen flex items-center justify-center bg-cover bg-center px-4 md:px-10 lg:px-60" style="background-image: url('images/whyhorizun.png');">
+<section class="h-screen flex items-center justify-center bg-cover bg-center px-4 sm:px-6 md:px-10 lg:px-60" style="background-image: url('images/whyhorizun.png');">
   <div class="text-center">
-    <h2 class="text-3xl md:text-5xl lg:text-7xl text-white py-3 font-bold">WHY HORIZUN STANDS OUT?</h2>
+    <h2 class="text-2xl sm:text-3xl md:text-5xl lg:text-7xl text-white py-3 font-bold">WHY HORIZUN STANDS OUT?</h2>
     <a href="shop_page.html">
-      <button class="mt-4 px-6 md:px-8 py-3 border border-white text-white text-sm tracking-widest hover:bg-white hover:text-black transition duration-300 font-playfair">SHOP NOW</button>
+      <button class="mt-4 px-4 sm:px-6 md:px-8 py-2 sm:py-3 border border-white text-white text-xs sm:text-sm tracking-widest hover:bg-white hover:text-black transition duration-300 font-playfair">SHOP NOW</button>
     </a>
   </div>
 </section>
 
 <section class="py-10 bg-white text-center">
-  <div class="grid grid-cols-2 md:grid-cols-4 gap-2">
+  <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-2">
     <img src="images/1.png" alt="Bottle" class="w-full h-auto object-contain">
     <img src="images/2.png" alt="Bottle" class="w-full h-auto object-contain">
     <img src="images/Unbeatable Temperature Retention.png" alt="Bottle" class="w-full h-auto object-contain">
@@ -106,10 +112,10 @@
   </div>
 </section>
 
-<footer class="py-20 px-6 md:px-20 lg:px-60 bg-black text-white">
+<footer class="py-20 px-4 sm:px-6 md:px-20 lg:px-60 bg-black text-white">
   <img src="images/a589862f-9d57-4dd3-bdb0-413de0b7eacb_removalai_preview.png" class="filter grayscale brightness-0 invert py-7 w-auto max-w-[8rem]" alt="Horizun Logo">
   <div class="py-4">
-    <ul class="flex flex-wrap gap-4 text-sm justify-center">
+    <ul class="flex flex-wrap gap-4 text-xs sm:text-sm justify-center">
       <li><a href="index.html" class="hover:underline">Home</a></li>
       <li><a href="about.html" class="hover:underline">About Us</a></li>
       <li><a href="services.html" class="hover:underline">Services</a></li>
@@ -118,7 +124,7 @@
       <li><a href="privacy.html" class="hover:underline">Privacy Policy</a></li>
     </ul>
   </div>
-  <p class="text-sm text-center">&copy; 2025 Horizun. All rights reserved.</p>
+  <p class="text-xs sm:text-sm text-center">&copy; 2025 Horizun. All rights reserved.</p>
   <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png" class="filter grayscale brightness-0 invert py-5 mx-auto" alt="Partner Logo">
 </footer>
 
@@ -135,3 +141,4 @@
 
 </body>
 </html>
+
