--- a/html/product.html
+++ b/html/product.html
@@ -80,27 +80,24 @@
   </script>
 </head>
 
-<body id="product-imagebg" class="bg-no-repeat bg-cover bg-center bg-gray-200 w-full min-h-screen bg-fixed">
-
-  <!-- Header -->
-  <header class="sticky top-0 bg-white text-black flex justify-between items-center px-4 md:px-20 lg:px-40 py-6 md:py-10 fixed top-0 w-full z-50">
-    <div>
+<header class="sticky top-0 bg-white text-black flex justify-between items-center px-4 md:px-20 lg:px-40 py-6 md:py-10 fixed top-0 w-full z-50">
+  <div>
       <i class="fas fa-shopping-bag text-xl"></i>
-    </div>
-    <div class="text-lg tracking-widest font-[Tangerine] w-24 md:w-32 lg:w-30 h-auto">
-      <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png" alt="Logo">
-    </div>
-    <div class="flex items-center space-x-2">
+  </div>
+  <div class="text-lg tracking-widest font-[Tangerine] w-24 md:w-32 lg:w-30 h-auto">
+      <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png">
+  </div>
+  <div class="flex items-center space-x-2">
       <i class="fas fa-bars text-xl"></i>
       <span class="text-sm font-semibold">MENU</span>
-    </div>
-  </header>
+  </div>
+</header>
 
-  <!-- Main Content -->
+<body id="product-imagebg" class="bg-no-repeat bg-cover bg-center bg-gray-200 w-full min-h-screen bg-fixed">
+
   <div class="flex flex-col md:flex-row min-h-[80vh] gap-x-8 px-4 md:px-16 mt-32 md:mt-24 mb-10">
     <!-- Left -->
     <div class="w-full md:w-[70%] p-4 md:p-6 flex justify-center md:justify-end">
-      <!-- Optional space for large product image or showcase -->
     </div>
 
     <!-- Right -->
@@ -125,12 +122,16 @@
     </div>
   </div>
 
-  <!-- Footer (unchanged) -->
-  <footer class="py-40 px-60 bg-black text-white">
-    <img src="images/a589862f-9d57-4dd3-bdb0-413de0b7eacb_removalai_preview.png"
-         class="filter grayscale brightness-0 invert py-7 w-auto max-w-32" alt="Horizun Logo">
+  <footer class="bg-black text-white px-10 py-20">
 
-    <div class="py-4">
+    <div class="mb-8">
+      <img src="images/a589862f-9d57-4dd3-bdb0-413de0b7eacb_removalai_preview.png"
+           class="filter grayscale brightness-0 invert max-h-16 w-auto"
+           alt="Horizun Logo">
+    </div>
+  
+
+    <div class="mb-8">
       <ul class="flex flex-wrap gap-6 text-sm">
         <li><a href="index.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">Home</a></li>
         <li><a href="about.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">About Us</a></li>
@@ -141,10 +142,13 @@
       </ul>
     </div>
 
-    <p class="text-sm">&copy; 2025 Horizun. All rights reserved.</p>
-
-    <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png"
-         class="filter grayscale brightness-0 invert py-5" alt="Partner Logo">
+    <p class="text-sm mb-6">&copy; 2025 Horizun. All rights reserved.</p>
+    <div>
+      <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png"
+           class="filter grayscale brightness-0 invert max-h-16 w-auto"
+           alt="Partner Logo">
+    </div>
   </footer>
+
 </body>
 </html>
