--- a/html/about.html
+++ b/html/about.html
@@ -1,72 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Horizun</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="icon" href="images/Untitled design (2).png" type="image/png" />
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Horizun</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    </head>
 <body class="bg-white text-gray-800">
 
-<!-- Header -->
-<header class="bg-white text-black flex justify-between items-center px-4 md:px-20 lg:px-40 py-6 md:py-10 fixed top-0 w-full z-50">
-  <!-- Left Icon -->
-  <div>
-    <i class="fas fa-shopping-bag text-xl"></i>
-  </div>
-  <!-- Logo -->
-  <div class="text-lg tracking-widest font-[Tangerine] w-20 md:w-32 lg:w-36 h-auto">
-    <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png" alt="Horizun Logo">
-  </div>
-  <!-- Right Menu -->
-  <div class="flex items-center space-x-2">
-    <i class="fas fa-bars text-xl"></i>
-    <span class="text-sm font-semibold">MENU</span>
-  </div>
-</header>
+    <header class="sticky top-0 bg-white text-black flex justify-between items-center px-4 md:px-20 lg:px-40 py-6 md:py-10 fixed top-0 w-full z-50">
+        <div>
+            <i class="fas fa-shopping-bag text-xl"></i>
+        </div>
+        <div class="text-lg tracking-widest font-[Tangerine] w-24 md:w-32 lg:w-30 h-auto">
+            <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png">
+        </div>
+        <div class="flex items-center space-x-2">
+            <i class="fas fa-bars text-xl"></i>
+            <span class="text-sm font-semibold">MENU</span>
+        </div>
+    </header>
 
-<!-- Hero Section -->
-<div class="text-center flex justify-center items-center h-screen bg-cover bg-center bg-black px-4 md:px-20 lg:px-60 mt-20"
-     style="background-image: url('images/whyhorizun.png');">
-  <h1 class="text-4xl md:text-6xl lg:text-8xl text-white font-bold">ABOUT HORIZUN</h1>
+<div class="text-center justify-center items-center h-screen flex bg-cover bg-black px-60" style="background-image: url('images/whyhorizun.png');">
+    <h1 class="text-8xl text-white font-bold">ABOUT HORIZUN</h1>
 </div>
 
-<!-- About Section -->
-<section class="py-20 md:py-40 px-4 md:px-20 lg:px-60 bg-white text-center">
-  <h3 class="text-base md:text-lg lg:text-2xl text-black font-light leading-relaxed">
-    Founded with a passion for timeless design, Horizun is a leading name in luxury flasks and bottles.
-    Combining Italian craftsmanship with innovative engineering, we create premium products that offer both exceptional performance and an elegant aesthetic.
-    <br><br>
-    Since our inception, Horizun has redefined the luxury drinking experience, offering products that blend form and function seamlessly.
-    Our commitment to quality, craftsmanship, and attention to detail ensures that each piece is a work of art, designed for those who appreciate the finer things in life.
-    <br><br>
-    As we continue to innovate, we honor the legacy of fine Italian design while pushing the boundaries of what luxury can be, making Horizun the choice for discerning individuals who demand both style and performance.
-  </h3>
+<section class="py-40 px-80 bg-white text-center">
+    <h3 class="text-2xl text-black font-light">
+        Founded with a passion for timeless design, Horizun is a leading name in luxury flasks and bottles. Combining Italian craftsmanship with innovative engineering, we create premium products that offer both exceptional performance and an elegant aesthetic.
+        <br><br>
+        Since our inception, Horizun has redefined the luxury drinking experience, offering products that blend form and function seamlessly. Our commitment to quality, craftsmanship, and attention to detail ensures that each piece is a work of art, designed for those who appreciate the finer things in life.
+        <br><br>
+        As we continue to innovate, we honor the legacy of fine Italian design while pushing the boundaries of what luxury can be, making Horizun the choice for discerning individuals who demand both style and performance.
+    </h3>
 </section>
 
-<!-- Footer -->
-<footer class="py-20 md:py-40 px-4 md:px-20 lg:px-60 bg-black text-white text-center">
-  <img src="images/a589862f-9d57-4dd3-bdb0-413de0b7eacb_removalai_preview.png"
-       class="filter grayscale brightness-0 invert py-7 w-auto max-w-[8rem] mx-auto" alt="Horizun Logo" />
 
-  <div class="py-4">
-    <ul class="flex flex-wrap justify-center gap-4 md:gap-6 text-sm">
-      <li><a href="index.html" class="hover:underline">Home</a></li>
-      <li><a href="about.html" class="hover:underline">About Us</a></li>
-      <li><a href="services.html" class="hover:underline">Services</a></li>
-      <li><a href="contact.html" class="hover:underline">Contact</a></li>
-      <li><a href="careers.html" class="hover:underline">Careers</a></li>
-      <li><a href="privacy.html" class="hover:underline">Privacy Policy</a></li>
-    </ul>
-  </div>
+<footer class="bg-black text-white px-10 py-20">
+    <div class="mb-8">
+      <img src="images/a589862f-9d57-4dd3-bdb0-413de0b7eacb_removalai_preview.png"
+           class="filter grayscale brightness-0 invert max-h-16 w-auto"
+           alt="Horizun Logo">
+    </div>
 
-  <p class="text-sm mt-4">&copy; 2025 Horizun. All rights reserved.</p>
+    <div class="mb-8">
+      <ul class="flex flex-wrap gap-6 text-sm">
+        <li><a href="index.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">Home</a></li>
+        <li><a href="about.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">About Us</a></li>
+        <li><a href="services.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">Services</a></li>
+        <li><a href="contact.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">Contact</a></li>
+        <li><a href="careers.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">Careers</a></li>
+        <li><a href="privacy.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">Privacy Policy</a></li>
+      </ul>
+    </div>
 
-  <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png"
-       class="filter grayscale brightness-0 invert py-5 mx-auto" alt="Partner Logo" />
-</footer>
+    <p class="text-sm mb-6">&copy; 2025 Horizun. All rights reserved.</p>
 
+    <div>
+      <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png"
+           class="filter grayscale brightness-0 invert max-h-16 w-auto"
+           alt="Partner Logo">
+    </div>
+  </footer>
 </body>
 </html>
+
