--- a/html/contact.html
+++ b/html/contact.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us | Horizun</title>
+
   <script src="https://cdn.tailwindcss.com"></script>
+
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="images/Untitled design (2).png" type="image/png" />
+
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -14,32 +16,32 @@
   </style>
 </head>
 
-<body class="bg-white text-black overflow-x-hidden">
+<body class="bg-white text-black">
 
-  <!-- Header -->
-  <header class="bg-white fixed top-0 w-full z-50 shadow-sm">
-    <div class="max-w-7xl mx-auto px-4 md:px-10 py-5 md:py-6 flex justify-between items-center">
-      <div class="w-20 md:w-28">
-        <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png" alt="Horizun Logo" />
-      </div>
-      <div class="flex items-center space-x-2">
+  <header class="sticky top-0 bg-white text-black flex justify-between items-center px-4 md:px-20 lg:px-40 py-6 md:py-10 fixed top-0 w-full z-50">
+    <div>
+        <i class="fas fa-shopping-bag text-xl"></i>
+    </div>
+    <div class="text-lg tracking-widest font-[Tangerine] w-24 md:w-32 lg:w-30 h-auto">
+        <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png">
+    </div>
+    <div class="flex items-center space-x-2">
         <i class="fas fa-bars text-xl"></i>
         <span class="text-sm font-semibold">MENU</span>
-      </div>
     </div>
-  </header>
+</header>
 
-  <!-- Main Contact Section -->
-  <main class="pt-36 md:pt-44 pb-20 px-4 md:px-12 lg:px-24 bg-white">
+  <main class="pt-44 pb-32 px-6 md:px-24 bg-white">
     <div class="max-w-3xl mx-auto text-center">
-      <h1 class="text-2xl md:text-4xl font-light mb-4">Contact Horizun</h1>
-      <p class="text-gray-600 text-base md:text-lg leading-relaxed mb-12">
-        Reach out to us with inquiries, collaborations, or personalized assistance.
-        Our team is here to ensure your experience with Horizun is nothing short of exceptional.
-      </p>
+        <h1 class="text-4xl font-light mb-4">Contact Horizun</h1>
+        <p class="text-gray-600 text-lg leading-relaxed mb-14">
+            Reach out to us with inquiries, collaborations, or personalized assistance. Our team is here to ensure your experience with Horizun is nothing short of exceptional.
+        </p>
+        
     </div>
 
     <form class="max-w-2xl mx-auto space-y-8">
+
       <div>
         <label for="name" class="block mb-2 text-sm font-medium tracking-wide">Full Name</label>
         <input 
@@ -76,7 +78,7 @@
         ></textarea>
       </div>
 
-      <div class="text-center pt-4">
+      <div class="text-center pt-6">
         <button 
           type="submit"
           class="bg-black text-white px-10 py-4 rounded-full uppercase tracking-wider text-sm hover:bg-gray-900 transition-all"
@@ -87,27 +89,32 @@
     </form>
   </main>
 
-  <!-- Footer -->
-  <footer class="py-20 md:py-32 px-4 md:px-12 lg:px-24 bg-black text-white text-center">
-    <img src="images/a589862f-9d57-4dd3-bdb0-413de0b7eacb_removalai_preview.png"
-         class="filter grayscale brightness-0 invert py-7 w-auto max-w-[8rem] mx-auto" alt="Horizun Logo">
+  <footer class="bg-black text-white px-10 py-20">
+    <div class="mb-8">
+      <img src="images/a589862f-9d57-4dd3-bdb0-413de0b7eacb_removalai_preview.png"
+           class="filter grayscale brightness-0 invert max-h-16 w-auto"
+           alt="Horizun Logo">
+    </div>
 
-    <div class="py-4">
-      <ul class="flex flex-wrap justify-center gap-4 md:gap-6 text-sm">
-        <li><a href="index.html" class="hover:underline">Home</a></li>
-        <li><a href="about.html" class="hover:underline">About Us</a></li>
-        <li><a href="services.html" class="hover:underline">Services</a></li>
-        <li><a href="contact.html" class="hover:underline">Contact</a></li>
-        <li><a href="careers.html" class="hover:underline">Careers</a></li>
-        <li><a href="privacy.html" class="hover:underline">Privacy Policy</a></li>
+    <div class="mb-8">
+      <ul class="flex flex-wrap gap-6 text-sm">
+        <li><a href="index.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">Home</a></li>
+        <li><a href="about.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">About Us</a></li>
+        <li><a href="services.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">Services</a></li>
+        <li><a href="contact.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">Contact</a></li>
+        <li><a href="careers.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">Careers</a></li>
+        <li><a href="privacy.html" class="inline-block border-b border-transparent hover:border-white transition duration-300">Privacy Policy</a></li>
       </ul>
     </div>
 
-    <p class="text-sm mt-4">&copy; 2025 Horizun. All rights reserved.</p>
-
-    <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png"
-         class="filter grayscale brightness-0 invert py-5 mx-auto" alt="Partner Logo">
+    <p class="text-sm mb-6">&copy; 2025 Horizun. All rights reserved.</p>
+    <div>
+      <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png"
+           class="filter grayscale brightness-0 invert max-h-16 w-auto"
+           alt="Partner Logo">
+    </div>
   </footer>
+
 
 </body>
 </html>
