--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
       <div class="swiper-slide h-screen flex items-end bg-cover bg-center px-4 sm:px-6 md:px-10 lg:px-20" style="background-image: url('images/darkflask1wpng.png');">
         <div class="text-white mb-20">
           <h2 class="px-1 text-[10px] sm:text-xs md:text-sm lg:text-xl tracking-widest">NEW FLASK</h2>
-          <h3 class="text-2xl sm:text-3xl md:text-5xl lg:text-6xl mb-4 font-bold">FLASK GT-640</h3>
+          <h3 class="text-2xl sm:text-3xl md:text-5xl lg:text-6xl mb-4 font-bold">FLASQUE LE GRANDEUR-640</h3>
           <a href="shop_page.html" class="inline-block mt-2 px-4 sm:px-6 md:px-8 py-2 sm:py-3 border border-white text-white text-xs sm:text-sm tracking-widest hover:bg-white hover:text-black transition duration-300 font-playfair">
             DISCOVER NEW FLASK
           </a>
