--- a/html/shop_page.html
+++ b/html/shop_page.html
@@ -63,7 +63,7 @@
                  style="background-image: url('images/darkflask1wpng.png');">
                 <div class="text-white pb-20">
                     <h2 class="text-sm md:text-lg px-3 tracking-widest">NEW FLASK</h2>
-                    <h3 class="text-4xl md:text-6xl lg:text-8xl mb-4 font-bold">FLASK GT-640</h3>
+                    <h3 class="text-4xl md:text-6xl lg:text-8xl mb-4 font-bold">FLASQUE LE GRANDEUR-640</h3>
                 </div>
             </div>
 
