--- a/html/about.html
+++ b/html/about.html
@@ -7,7 +7,6 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     </head>
-<body class="bg-white text-gray-800">
 
     <header class="sticky top-0 bg-white text-black flex justify-between items-center px-4 md:px-20 lg:px-40 py-6 md:py-10 fixed top-0 w-full z-50">
         <div>
@@ -22,19 +21,24 @@
         </div>
     </header>
 
-<div class="text-center justify-center items-center h-screen flex bg-cover bg-black px-60" style="background-image: url('images/whyhorizun.png');">
-    <h1 class="text-8xl text-white font-bold">ABOUT HORIZUN</h1>
-</div>
+<body class="bg-white text-gray-800">
 
-<section class="py-40 px-80 bg-white text-center">
-    <h3 class="text-2xl text-black font-light">
-        Founded with a passion for timeless design, Horizun is a leading name in luxury flasks and bottles. Combining Italian craftsmanship with innovative engineering, we create premium products that offer both exceptional performance and an elegant aesthetic.
-        <br><br>
-        Since our inception, Horizun has redefined the luxury drinking experience, offering products that blend form and function seamlessly. Our commitment to quality, craftsmanship, and attention to detail ensures that each piece is a work of art, designed for those who appreciate the finer things in life.
-        <br><br>
-        As we continue to innovate, we honor the legacy of fine Italian design while pushing the boundaries of what luxury can be, making Horizun the choice for discerning individuals who demand both style and performance.
-    </h3>
-</section>
+    <div class="text-center justify-center items-center h-screen flex bg-cover bg-center px-4 sm:px-6 md:px-10 lg:px-60" style="background-image: url('images/whyhorizun.png'); background-position: center;">
+        <h1 class="text-4xl sm:text-6xl md:text-8xl text-white font-bold">
+            ABOUT HORIZUN
+        </h1>
+    </div>
+    
+    <section class="py-20 sm:py-32 lg:py-40 px-6 sm:px-10 md:px-20 lg:px-80 bg-white text-center">
+        <h3 class="text-lg sm:text-xl md:text-2xl text-black font-light leading-relaxed">
+            Founded with a passion for timeless design, Horizun is a leading name in luxury flasks and bottles. Combining Italian craftsmanship with innovative engineering, we create premium products that offer both exceptional performance and an elegant aesthetic.
+            <br><br>
+            Since our inception, Horizun has redefined the luxury drinking experience, offering products that blend form and function seamlessly. Our commitment to quality, craftsmanship, and attention to detail ensures that each piece is a work of art, designed for those who appreciate the finer things in life.
+            <br><br>
+            As we continue to innovate, we honor the legacy of fine Italian design while pushing the boundaries of what luxury can be, making Horizun the choice for discerning individuals who demand both style and performance.
+        </h3>
+    </section>
+    
 
 
 <footer class="bg-black text-white px-10 py-20">
