--- a/html/about.html
+++ b/html/about.html
@@ -2,10 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Horizun</title>
-        <script src="https://cdn.tailwindcss.com"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Horizun</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="icon" href="images/Untitled design (2).png" type="image/png" />
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              playfair: ['Playfair Display', 'serif']
+            }
+          }
+        }
+      }
+    </script>
     </head>
 
     <header class="sticky top-0 bg-white text-black flex justify-between items-center px-4 md:px-20 lg:px-40 py-6 md:py-10 fixed top-0 w-full z-50">
