--- a/html/product.html
+++ b/html/product.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="icon" href="images/Untitled design (2).png" type="image/png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
   <script>
     tailwind.config = {
@@ -33,21 +34,21 @@
         },
         2: {
           name: "Flasque Luxe-310",
-          price: "€249.50",
+          price: "€95.00",
           description: "Flasque Luxe-310 blends elegance with function. Perfect for daily sophistication.",
           imagecover: "images/bottle2cover.png",
           colors: ["#1A1A1A", "#4B4B4B", "#7F8C8D"]
         },
         3: {
           name: "Flasque de l’Élite-130",
-          price: "€310.00",
+          price: "€108.750",
           description: "Flasque de l’Élite-130 is refined and resilient. A true mark of style.",
           imagecover: "images/bottle3cover.png",
           colors: ["#FFF5E1", "#E0D7CE", "#C5B8A5"]
         },
         4: {
           name: "Flasque Prestige-820",
-          price: "€429.95",
+          price: "€79.99",
           description: "Flasque Prestige-820 exudes timeless style. A sleek, lasting statement.",
           imagecover: "images/bottle4cover.png",
           colors: ["#111111", "#2C2C2C", "#3B3B3B"]
@@ -80,18 +81,58 @@
   </script>
 </head>
 
-<header class="sticky top-0 bg-white text-black flex justify-between items-center px-4 md:px-20 lg:px-40 py-6 md:py-10 fixed top-0 w-full z-50">
+<input type="checkbox" id="menu-toggle" class="peer hidden" />
+
+<header
+  class="fixed top-0 w-full z-30 bg-white text-black
+         flex justify-between items-center
+         px-4 md:px-20 lg:px-40 py-6 md:py-10">
   <div>
-      <i class="fas fa-shopping-bag text-xl"></i>
+    <i class="fas fa-shopping-bag text-2xl"></i>
   </div>
-  <div class="text-lg tracking-widest font-[Tangerine] w-24 md:w-32 lg:w-30 h-auto">
-      <img src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png">
+
+  <div class="flex items-center justify-center  w-24 md:w-32 lg:w-30 h-auto">
+    <img
+      src="images/3b54b93e-e1c0-4236-8ca3-5af528914d07_removalai_preview.png"
+      alt="Logo"
+    />
   </div>
-  <div class="flex items-center space-x-2">
-      <i class="fas fa-bars text-xl"></i>
-      <span class="text-sm font-semibold">MENU</span>
-  </div>
+  
+  <label for="menu-toggle" class="cursor-pointer">
+    <div class="flex items-center space-x-2">
+      <div class="space-y-1.5">
+        <div class="w-6 h-px bg-black"></div>
+        <div class="w-6 h-px bg-black"></div>
+        <div class="w-6 h-px bg-black"></div>
+      </div>
+      
+      
+      <span class="text-sm font-semibold inline-block border-b border-transparent hover:border-black transition duration-300">MENU</span>
+    </div>
+  </label>
 </header>
+
+<aside
+  class="fixed top-0 right-0 h-full w-1/3 bg-white text-black
+         transform translate-x-full transition-transform duration-300
+         peer-checked:translate-x-0 z-40 shadow-lg">
+<label
+  for="menu-toggle"
+  class="absolute top-4 right-4 p-2 cursor-pointer hover:bg-gray-200 rounded-full">
+  <i class="fas fa-times text-2xl"></i>
+
+</label>
+  <nav class="mt-20 p-6 text-lg text-gray-500">
+    <ul class="space-y-6">
+      <li><a href="index.html"    class="inline-block border-b border-transparent hover:border-black hover:text-black transition duration-300">Home</a></li>
+      <li><a href="about.html"    class="inline-block border-b border-transparent hover:border-black hover:text-black transition duration-300">About Us</a></li>
+      <li><a href="services.html" class="inline-block border-b border-transparent hover:border-black hover:text-black transition duration-300">Services</a></li>
+      <li><a href="contact.html"  class="inline-block border-b border-transparent hover:border-black hover:text-black transition duration-300">Contact</a></li>
+      <li><a href="careers.html"  class="inline-block border-b border-transparent hover:border-black hover:text-black transition duration-300">Careers</a></li>
+      <li><a href="privacy.html"  class="inline-block border-b border-transparent hover:border-black hover:text-black transition duration-300">Privacy Policy</a></li>
+    </ul>
+  </nav>
+</aside>
 
 <body id="product-imagebg" class="bg-no-repeat bg-cover bg-center bg-gray-200 w-full min-h-screen bg-fixed">
 
